# SlimesSkyTravel

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
backend/: server.js
src/app/: game_loop.cpp  game_loop.h  game_renderer.cpp  game_renderer.h  game_updater.cpp  game_updater.h  input_handler.cpp  input_handler.h  main.cpp  tutorial_manager.h
src/core/constants/: game_constants.h  input_constants.h
src/core/states/: camera_state.h  game_progress_state.h  game_state.cpp  game_state.h  item_state.h  player_state.h  replay_state.h  skill_state.h  ui_state.h
src/core/utils/: physics_utils.cpp  stage_utils.cpp  stage_utils.h  ui_config_manager.cpp  ui_config_manager.h
src/game/: game_state.cpp  game_state.h  json_stage_loader.cpp  json_stage_loader.h  multiplayer_manager.cpp  multiplayer_manager.h  multiplayer_state.h  online_leaderboard_manager.cpp  online_leaderboard_manager.h  platform_system.cpp  platform_system.h  replay_manager.cpp  replay_manager.h  save_manager.cpp  save_manager.h  stage_manager.cpp  stage_manager.h  ui_state.h
src/gfx/: camera_system.h  game_state_ui_renderer.cpp  game_state_ui_renderer.h  minimap_renderer.h  renderer_3d.cpp
src/io/: audio_manager.cpp  audio_manager.h  input_system.cpp  input_system.h  network_manager.cpp  network_manager.h
src/physics/: physics_system.cpp  physics_system.h
